# ai-trend-radar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-report.yml
src/trend_radar/: cli.py  http.py  models.py  report.py  sample_data.py  scoring.py  storage.py  summarizer.py
src/trend_radar/collectors/: __init__.py  arxiv.py  github.py  hackernews.py  huggingface.py
